public class App {
    public static void main(String[] args) throws Exception {
      //  Schuelerverwaltung app1 = new Schuelerverwaltung();

GUI gui = new GUI();

Input input = new Input();

ArraysList a = new ArraysList();
        
    }
}