public class ArraysList {

    String karten[] = {
"   ",
"",
"",
"",
"",
"",
"",
"",
"",
"",
"",

    };

    String rar[] = {
        "Gewöhnlich",
        "Ungewöhnlich",
        "Rare",
        "Sehr Rare",
        "Ultra Rare",
        "Secret Rare",
        "Episch",
        "Insane",
        "Legendär",
        "Heroic",
        "Secret",
        
        };




 

    public ArraysList(){
        System.out.println("Dt");

    }
}
