public class Karte {
    
    String karte_Name;
    String karte_Seltenheit;
    String karte_Damage;
    String karte_HP;
    String karte_Agility;
    String karte_Element;
    String karte_ID;
    String karte_Ability;

}
