@startuml
skinparam classAttributeIconSize 0

class App{
 -s : SystemController
 -input : Input
 -a : ArraysList
}



class ArraysList{
+rar : String[]
 }

class Karte{
 -Karte_Name: String
 -Karte_Seltenheit: String
 -Karte_Damage: String
 -Karte_HP: String
 -Karte_Agility: String
 -Karte_Element: String
 -Karte_ID: String
 -Karte_Ability: String

}



class Fach{
 -name : String
 +Fach(pName : String)
 +gebeAlleNotenAus() : String
 +noteHinzufuegen(pNote : Note) : void
 +getName(): String
 +setName(pName : String) : void
 +toString() : String
}

class Note{
 -note: int
 -jahr : int
 +Note(pNote : int, pJahr : int)
 +getNote(): String
 +setNote(pNote : int) : void
 +getJahr(): String
 +setJahr(pNote : int) : void
 +toString() String
}




class Schueler{
  -passwort : String

  +Schueler(pVorname : String, pNachname : String, pAlter : int, pPassword : String)
  
  +changePassword(pPassword : String) : void
  +ueberpruefePassword(pPassword : String): boolean
  +gebeNotenAus() : void
  + fachAnlegen(pFach : Fach) : void
  +alleFaecherAusgeben() : void
  +alleFachNamenMitNummernAusgeben() : void
  +noteFuerFachAnlegen(pFachID : int, pNote : Note) : void
  -setPassword(pPassword : String) : void
}


Fach "1" *-- "0..10" Note
Schuelerverwaltung  *-- "1" MenueFuehrung
Schueler "1" *-- "0..10" Fach
Person <|-- Schueler

@enduml
